dark mode switch fix for all pages

--- a/dj/dj_app/static/home.css
+++ b/dj/dj_app/static/home.css
@@ -3,20 +3,6 @@ body {
   padding: 0;
 }
 
-  /* Add light and dark mode switch styles */
-  .dark-mode-switch {
-    position: fixed;
-    top: 100px;
-    right: 10px;
-    display: flex;
-    align-items: center;
-    z-index: 9999;
-  }
-  
-  .dark-mode-switch label {
-    margin-left: 5px;
-  }
-  
   .dark-mode .links-container a {
     color: white;
   }
@@ -29,7 +15,6 @@ body {
     color: #ffffff; /* white color */
   }
   
-
 .links-container {
   display: flex;
   justify-content: center;
